# pointcloud_benchmark

./: CMakeLists.txt  package.xml  setup.py
include/: pointcloud_cuda.cuh  pointcloud_frustum_cuda.cuh  voxel_grid.cuh
launch/: experiment_cuda.launch  experiment_cuda_center.launch  experiment_cuda_lz4.launch  experiment_frustum_cuda.launch  experiment_o3d.launch  experiment_pcl.launch
script/: experiment_open3d
src/: experiment_cuda.cpp  experiment_cuda_center.cpp  experiment_cuda_lz4.cpp  experiment_frustum.cpp  experiment_pcl.cpp  frustum_cuda.cu  pointcloud_cuda.cu  voxel_grid.cu  voxel_grid_centroid.cu
src/o3d_tools/: open3DToROS.py
